<resources>
    <string name="app_name">Airline</string>
    <string name="login_page_title">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="origin_prompt">Select Origin</string>
    <string name="airplane_prompt">Select Airplane</string>
    <string name="destination_prompt">Select Destination</string>
    <string name="email_hint">email\n</string>
    <string name="phone_hint">phone number</string>

</resources>